<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.zipp.ai</groupId>
  <artifactId>ai-agent-draw-io</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>
  <repositories>
    <repository>
      <id>nexus-aliyun</id>
      <name>nexus-aliyun</name>
      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
      <releases/>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <google.adk.version>0.5.0</google.adk.version>
  </properties>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.3</version>
    <!-- 可配置 ai 2.0.0-M2 升级 + skills spring-ai-agent-utils 升级使用 -->
    <!--<version>4.1.0-M1</version>-->
  </parent>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>fastjson</artifactId>
        <version>2.0.28</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.9</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>32.1.3-jre</version>
      </dependency>
      <dependency>
        <groupId>dom4j</groupId>
        <artifactId>dom4j</artifactId>
        <version>1.6.1</version>
      </dependency>
      <dependency>
        <groupId>com.thoughtworks.xstream</groupId>
        <artifactId>xstream</artifactId>
        <version>1.4.10</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt</artifactId>
        <version>0.9.1</version>
      </dependency>
      <dependency>
        <groupId>com.auth0</groupId>
        <artifactId>java-jwt</artifactId>
        <version>4.4.0</version>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.15</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk</artifactId>
        <version>${google.adk.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk-dev</artifactId>
        <version>${google.adk.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk-spring-ai</artifactId>
        <version>${google.adk.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk.samples</groupId>
        <artifactId>google-adk-sample-helloworld</artifactId>
        <version>${google.adk.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.adk</groupId>
        <artifactId>google-adk-contrib-langchain4j</artifactId>
        <version>0.2.0</version>
      </dependency>
      <!--            <dependency>-->
      <!--                <groupId>dev.langchain4j</groupId>-->
      <!--                <artifactId>langchain4j-core</artifactId>-->
      <!--                <version>1.4.0</version>-->
      <!--            </dependency>-->
      <!--            <dependency>-->
      <!--                <groupId>dev.langchain4j</groupId>-->
      <!--                <artifactId>langchain4j-open-ai</artifactId>-->
      <!--                <version>1.4.0</version>-->
      <!--            </dependency>-->
      <!-- spring ai 1.1.0 https://central.sonatype.com/artifact/org.springframework.ai/spring-ai-bom -->
      <dependency>
        <groupId>org.springframework.ai</groupId>
        <artifactId>spring-ai-bom</artifactId>
        <version>1.1.0-M3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- 可升级配置使用 -->
      <!--<dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-openai</artifactId>
                <version>2.0.0-M2</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-model</artifactId>
                <version>2.0.0-M2</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-mcp</artifactId>
                <version>2.0.0-M2</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-starter-mcp-client-webflux</artifactId>
                <version>2.0.0-M2</version>
            </dependency>-->
      <!-- langchain4j https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-bom -->
      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-bom</artifactId>
        <version>1.4.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- https://github.com/spring-ai-community/spring-ai-agent-utils -->
      <dependency>
        <groupId>org.springaicommunity</groupId>
        <artifactId>spring-ai-agent-utils</artifactId>
        <version>0.4.2</version>
      </dependency>
      <!-- 设计模式框架 -->
      <dependency>
        <groupId>cn.bugstack.wrench</groupId>
        <artifactId>xfg-wrench-starter-design-framework</artifactId>
        <version>3.0.0</version>
      </dependency>
      <!-- 工程模块 -->
      <dependency>
        <groupId>org.zipp.ai</groupId>
        <artifactId>ai-agent-draw-io-api</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>org.zipp.ai</groupId>
        <artifactId>ai-agent-draw-io-domain</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>org.zipp.ai</groupId>
        <artifactId>ai-agent-draw-io-infrastructure</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>org.zipp.ai</groupId>
        <artifactId>ai-agent-draw-io-types</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>org.zipp.ai</groupId>
        <artifactId>ai-agent-draw-io-trigger</artifactId>
        <version>1.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <!-- maven 脚手架 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-archetype-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <outputDirectory>${project.build.directory}/ai-agent-draw-io-archetype</outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.7</version>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <java_jvm>-Xms1G -Xmx1G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=dev -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-agent-draw-io-boot -Xloggc:/export/Logs/ai-agent-draw-io-boot/gc-ai-agent-draw-io-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>dev</profileActive>
      </properties>
    </profile>
    <profile>
      <id>test</id>
      <properties>
        <java_jvm>-Xms1G -Xmx1G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=test -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/ai-agent-draw-io-boot -Xloggc:/export/Logs/ai-agent-draw-io-boot/gc-ai-agent-draw-io-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>test</profileActive>
      </properties>
    </profile>
    <profile>
      <id>prod</id>
      <properties>
        <java_jvm>-Xms6G -Xmx6G -server  -XX:MaxPermSize=256M -Xss256K -Dspring.profiles.active=release -XX:+DisableExplicitGC -XX:+UseG1GC  -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/export/Logs/fq-mall-activity-app -Xloggc:/export/Logs/ai-agent-draw-io-boot/gc-ai-agent-draw-io-boot.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps</java_jvm>
        <profileActive>prod</profileActive>
      </properties>
    </profile>
  </profiles>
  <modules>
    <module>ai-agent-draw-io-api</module>
    <module>ai-agent-draw-io-app</module>
    <module>ai-agent-draw-io-domain</module>
    <module>ai-agent-draw-io-trigger</module>
    <module>ai-agent-draw-io-infrastructure</module>
    <module>ai-agent-draw-io-types</module>
  </modules>
</project>
